backendservice.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9113'
    prometheus.io/path: '/metrics'
spec:
  selector:
    app: backend
  ports:
    - name: backend-port
      protocol: TCP
      port: 80
      targetPort: 3001  # Existing backend service port
    - name: metrics-port
      protocol: TCP
      port: 9113        # Port for NGINX Exporter
      targetPort: 9113
