frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        # Frontend Container
        - name: frontend
          image: mounikamouni0612/frontend:latest
          ports:
            - containerPort: 3000

        # NGINX Prometheus Exporter Sidecar
        - name: nginx-exporter
          image: nginx/nginx-prometheus-exporter:latest
          args:
            - "-nginx.scrape-uri=http://localhost:3000"
          ports:
            - containerPort: 9113

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9113"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: frontend
  ports:
    - name: frontend-port
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: metrics-port
      protocol: TCP
      port: 9113
      targetPort: 9113
  type: ClusterIP
