frontendservice.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '80'  # Update with the actual service port if different
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
